<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text=""
            android:textSize="20dp"
            android:textColor="@color/negro"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Unit"
            android:textColor="@color/negro"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Calcular"
            android:background="@color/colorPrimary"
            android:textColor="@color/negro"
            android:layout_margin="4dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Result"
            android:textColor="@color/negro"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text=""
            android:textColor="@color/negro"
            android:gravity="center"
            android:textSize="25dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>